--- a/skysub.tex
+++ b/skysub.tex
@@ -72,7 +72,7 @@ This data set allows simultaneous observations of resolved stars and near-infrar
 Here we develop NIR observation and reduction methods to recover a uniform surface brightness map across the $3\arcdeg \times 1\arcdeg$ disk of M31 with 27 WIRCam fields.
 Two sky-target nodding strategies are tested, and we find that strictly minimizing sky sampling latency does not enhance background subtraction accuracy, which is at best 2\% of the background level.
 We fully describe our WIRCam reduction pipeline and advocate using flats built from night sky images over a single night, rather than dome flats that do not capture the WIRCam gain structure.
-Contamination from scattered light and thermal background in sky flats has a negligible effect on the surface brightness shape compared to stochastic differences in background shape between sky and galaxy disk fields, which are on the order of 0.3\% of the background level.
+Contamination from scattered light and thermal background in sky flats has a negligible effect on the surface brightness shape compared to stochastic differences in background shape between sky and galaxy disk fields, which are $\sim 0.3$\% of the background level.
 The most dramatic calibration step is the introduction of scalar sky offsets to each image that optimizes surface brightness continuity.
 This step reduces the mean surface brightness difference between observation blocks from 1\% to $<0.1$\% of the background level, though the absolute background level remains statistically uncertain to 0.15\% of the background level.
 We present our WIRCam reduction pipeline and performance analysis here as a template for future near-infrared observers needing wide-area surface brightness maps with sky-target nodding, and give specific recommendations for improving photometry of all CFHT/WIRCam programs.
