--- a/skysub.tex
+++ b/skysub.tex
@@ -28,7 +28,7 @@
 \newcommand{\sw}[1]{\textit{#1}} % style software titles
 \newcommand{\sn}{\ensuremath{S/N}} % signal to noise
 \newcommand{\sersic}{S\'{e}rsic}
-\newcommand{\iiwione}{\sw{`I`iwi 1.0}}
+\newcommand{\iiwione}{\sw{`I`iwi}}
 \newcommand{\androids}{\textsc{androids}}
 \newcommand{\changeit}[1]{\textcolor{BrickRed}{\underline{#1}}} % markup bad sections
 \newcommand{\todo}[1]{\textcolor{BurntOrange}{\textsf{#1}}} % markup TODOs
@@ -205,7 +205,7 @@ Observations were carried out in the NIR $J$ ($\lambda_0 \sim 1.2 \mu\mathrm{m}$
 
 WIRCam is an array of four HgCdTe HAWAII-RG2 detectors \citep{Puget:2004}.
 Each detector comprises $2048\times 2048$ pixels, with a scale of 0\farcs 3~pix$^{-1}$, which critically samples CFHT's typical seeing of 0\farcs 65.
-WIRCam's detectors are arranged in a $2\times 2$ grid with 45\arcsec~gaps, so that the entire instrument covers $21.5\arcmin \times 21.5\arcmin$ of sky.
+WIRCam's detectors are arranged in a $2\times 2$ grid with 45\arcsec~gaps, so that the entire instrument covers $21\farcm 5 \times 21\farcm 5$ of sky.
 It is truly the advent of NIR focal plane arrays, like WIRCam, that has enabled wide-field NIR studies of M31.
 
 The \androids\ WIRCam survey is designed to simultaneously resolve stars and recover the integrated surface brightness of the entire M31 disk.
